--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Level5Activity"></activity>
+        <activity android:name=".Level5Activity" />
         <activity android:name=".Level4Activity" />
         <activity android:name=".Level3Activity" />
         <activity android:name=".Level2Activity" />
         <activity android:name=".Level1Activity" />
-        <activity android:name=".Level_1_Activity" />
         <activity android:name=".LevelSelectorActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
