Commit version 1.3: (krsticdragan) AutoTypeTextView Replaced with TypedTextView (iamporus)                                               Note: Version 2.0 = replaces buttons with icons, possibly replaces text scenario with voice and subtitles

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     //AutoTypingTextView: Dragan Krstik (krstikdragan)
     implementation 'com.krsticdragan:autotypetextview:1.1'
 
+    //TyperTextView: iamporus
+    implementation 'com.github.iamporus:TypedTextView:1.1.2'
+
 }
