--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        // jitpack repo for TyperTextView
+        maven { url 'https://jitpack.io' }
     }
 }
 
